Major regression in denoising quality in new builds #52322

Closed
opened 2017-08-09 19:33:50 +02:00 by Adam Friesen · 10 comments

System Information
Win10 64 bit (Creators update); 24 gigs RAM; i7 3770 CPU; AMD 7xxx GPU

Blender Version
Broken: hash 3c14f02 (August 7)
Worked: hash a27b6ae (July 22)

Short description of error
The denoiser has taken a nosedive in recent builds as far as quality is concerned (a number of image features seem to not be detected anymore for one thing). This is being seen using CPU rendering.

Image from the July 22 build (also applies to 2.79 RC)
Dregression_normal.png

Image from the August 7 build
Dregression_bad.png

Settings
Dregression_settings.png

Exact steps for others to reproduce the error
Open the .blend file and render (once in an older build and once in a new build). You can see that it will not be due to the change in sampling because the good image was done with a min-bounce value of 3 (making the un-denoised version very similar to the same in newer builds with the same amount of samples).

.blend
Cycles_GlassTest.blend

Hope this can be addressed quickly :)

**System Information** Win10 64 bit (Creators update); 24 gigs RAM; i7 3770 CPU; AMD 7xxx GPU **Blender Version** Broken: hash 3c14f02 (August 7) Worked: hash a27b6ae (July 22) **Short description of error** The denoiser has taken a nosedive in recent builds as far as quality is concerned (a number of image features seem to not be detected anymore for one thing). This is being seen using CPU rendering. Image from the July 22 build (also applies to 2.79 RC) ![Dregression_normal.png](https://archive.blender.org/developer/F702630/Dregression_normal.png) Image from the August 7 build ![Dregression_bad.png](https://archive.blender.org/developer/F702633/Dregression_bad.png) Settings ![Dregression_settings.png](https://archive.blender.org/developer/F702636/Dregression_settings.png) **Exact steps for others to reproduce the error** Open the .blend file and render (once in an older build and once in a new build). You can see that it will not be due to the change in sampling because the good image was done with a min-bounce value of 3 (making the un-denoised version very similar to the same in newer builds with the same amount of samples). **.blend** [Cycles_GlassTest.blend](https://archive.blender.org/developer/F702640/Cycles_GlassTest.blend) Hope this can be addressed quickly :)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon
Member

Added subscribers: @LukasStockner, @LazyDodo

Added subscribers: @LukasStockner, @LazyDodo
Member

@LukasStockner mind taking a peek here?

@LukasStockner mind taking a peek here?

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2017-08-09 22:09:36 +02:00

Probably my fault, I'll look into it.

Probably my fault, I'll look into it.

I couldn't repro this on Linux, with the various SSE kernels. So maybe Windows specific, will check that later.

I couldn't repro this on Linux, with the various SSE kernels. So maybe Windows specific, will check that later.

This issue was referenced by blender/cycles@7bad374b8c

This issue was referenced by blender/cycles@7bad374b8c800b8051bf215825f2cab7540c3427

This issue was referenced by 267e75158a

This issue was referenced by 267e75158a32d8051a95e4fa9b6feba33ee2d586

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52322
No description provided.